--- a/CSS/registration.css
+++ b/CSS/registration.css
@@ -1,17 +1,20 @@
+*{
+  margin: 0;
+}
+
 .signup-layout-container,
 .login-layout-container {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: white;
-  position: relative;
+  background-color: black;
 }
 
 .signup-layout,
 .login-layout {
   padding: 20px;
-  background-color: #111;
+  background-color: #333333;
   border-radius: 10px;
 }
 
