started admin.php

--- a/CSS/innerGallery.css
+++ b/CSS/innerGallery.css
@@ -17,6 +17,8 @@
     background-color: white;
     width: 60%;
     display: flex;
+    /* border-radius: 10px; */
+    /* border: 1px solid gray; */
 }
 
 .gallery-image{
