--- a/CSS/home.css
+++ b/CSS/home.css
@@ -101,6 +101,7 @@
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .visit-gallery-button{
