now we can upload the images,title,description and view on the gallery page

--- a/CSS/admin.css
+++ b/CSS/admin.css
@@ -14,8 +14,8 @@ body {
     width: 16%;
     color: white;
     height: 100vh; 
-    padding-top: 30px;
-    background-color: aqua;
+    padding-top: 20px;
+    
 }
 
 .logo-section {
@@ -30,13 +30,15 @@ body {
 }
 
 .appointments-section,
-.add-gallery-section {
+.add-gallery-section,
+.take-home {
     margin-bottom: 20px;
     padding: 10px;
 }
 
 .appointments,
-.add-gallery {
+.add-gallery,
+.home-link {
     width: 100%;
     padding: 8px 10px;
     font-size: 18px;
@@ -50,20 +52,120 @@ body {
 .main-content-section {
     width: 100%;
     color: white;
-    padding-top: 30px;
-    background-color: pink;
+    padding-top: 20px;
     height: 100vh;
     position: absolute;
     top: 0;
     left: 16%;
+    /* background-color: #333; */
 }
 
 .main-content-section hr{
-    margin-top: 15px;
-    margin-bottom: 30px;
+    margin-top: 10px;
 }
 
 .admin-title {
     font-size: 30px;
-    padding: 20px;
+    padding: 10px;
 }
+
+.upload-section{
+    position: absolute;
+    top: 100px;
+    left: 300px
+}
+
+.upload-image-form {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin-bottom: 10px;
+}
+
+.upload-image-title{
+    font-size: 20px;
+    color: white;
+    margin-bottom: 5px;
+}
+
+.upload-image-input {
+    display: none;
+}
+
+/* Style the label to act as the file input trigger */
+.upload-image-label {
+    cursor: pointer;
+    position: relative;
+    display: inline-block;
+    padding: 0;
+    width: 0;
+}
+
+/* Style the image inside the label */
+.upload-icon {
+    width: 120px;  
+    height: 120px;
+    object-fit: contain;
+    display: block;
+}
+
+.upload-title-form,
+.upload-description-form{
+    margin-bottom: 10px;
+}
+
+.upload-description-form{
+    position: relative;
+}
+
+.upload-title,
+.description-title{
+    color: white;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.upload-title-input{
+    width: 400px;
+    height: 40px;
+    padding-left: 10px;
+    font-size: 15px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    outline: none;
+    font-family: sans-serif;
+    background-color: #e0dede;
+}
+
+.upload-description-input {
+    width: 400px;
+    min-height: 200px;           
+    height: auto;               
+    padding: 10px;
+    font-size: 15px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    outline: none;
+    font-family: sans-serif;
+    background-color: #e0dede;
+}
+
+.word-count {
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    font-size: 14px;
+    color: gray;
+}
+
+.upload-button{
+    font-size: 20px;
+    padding: 5px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #ffe400;
+    cursor: pointer;
+}
+
+
+
