--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -20,7 +20,7 @@
     justify-content: center; 
     align-items: center; 
     height: 200px; 
-    background-color: #333;
+    /* background-color: #333; */
     color: white; 
 }
 
