--- a/CSS/admin.css
+++ b/CSS/admin.css
@@ -50,23 +50,58 @@ body {
 }
 
 .main-content-section {
-    width: 100%;
+    width: 84%;
     color: white;
     padding-top: 20px;
     height: 100vh;
     position: absolute;
     top: 0;
     left: 16%;
-    /* background-color: #333; */
 }
+
+.manage-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+    width: 100%; 
+}
+
 
 .main-content-section hr{
     margin-top: 10px;
 }
 
 .admin-title {
-    font-size: 30px;
+    font-size: 25px;
     padding: 10px;
+}
+
+.admin-logout-button{
+    position: relative;
+}
+
+.admin-button{
+    margin-right: 80px;
+    padding: 5px 10px;
+    font-size: 15px;
+    border-radius: 50px;
+    border: none;
+    background-color: #ffe400;
+    cursor: pointer;
+}
+
+.logout-button{
+    position: absolute;
+    top: 28px;
+    right: 80px;
+    padding: 5px 10px;
+    border: none;
+    font-size: 15px;
+    border-radius: 5px;
+    color: red;
+    background-color: rgb(253, 253, 253);
+    cursor: pointer;
+    display: none;
 }
 
 .upload-section{
