--- a/CSS/innerGallery.css
+++ b/CSS/innerGallery.css
@@ -17,8 +17,6 @@
     background-color: white;
     width: 60%;
     display: flex;
-    /* border-radius: 10px; */
-    /* border: 1px solid gray; */
 }
 
 .gallery-image{
@@ -65,6 +63,10 @@
     gap: 30px;
 }
 
+.edit-delete-control form{
+    background: none;
+}
+
 .edit-button,
 .delete-button{
     padding: 5px 30px;
@@ -73,6 +75,7 @@
     border-radius: 8px;
     cursor: pointer;
     margin-bottom: 20px;
+    background: none;
 }
 
 .edit-button{
@@ -98,6 +101,42 @@
     font-size: 20px;
     cursor: pointer;
     background-color: #ffe400;
+}
+
+.edit-form {
+    margin-top: 20px;
+}
+
+.edit-section {
+    margin-bottom: 10px;
+}
+
+.edit-section label {
+    font-size: 18px;
+    color: white;
+}
+
+.edit-section input,
+.edit-section textarea {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f8f8f8;
+}
+
+.update-button {
+    background-color: #ffe400;
+    color: black;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.update-button:hover {
+    background-color: #e0c100;
 }
 
 
