--- a/CSS/tableHeadingData.css
+++ b/CSS/tableHeadingData.css
@@ -20,7 +20,7 @@
 
 .table-heading, .table-data {
     display: grid;
-    grid-template-columns: 1fr 2fr 3fr 2fr; 
+    grid-template-columns:2fr 1fr 1fr 3fr 1fr 1fr; 
     align-items: center;
 }
 
@@ -32,7 +32,7 @@
 
 .table-heading span {
     padding: 12px 16px;
-    border-right: 1px solid #d1d1d1;
+    border-right: 1px solid #f0f0f0;
 }
 
 .table-heading span:last-child {
@@ -59,4 +59,18 @@
     height: 60px;
     object-fit: cover;
     border-radius: 5px;
+}
+
+.complete-button{
+    margin-left: 10px;
+    width: 100px;
+    background-color: #13da66;
+    border: none;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    color: black;
+    font-size: 20px;
 }
