--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -21,7 +21,7 @@
     align-items: center; 
     height: 200px; 
     /* background-color: #333; */
-    color: white; 
+    color: rgb(189, 182, 182); 
 }
 
 .footer-logo {
